--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 * @Author: 牛培楠
 * @Date:   2018-07-10 13:20:03
 * @Last Modified by:   牛培楠
-* @Last Modified time: 2018-07-23 22:35:44
+* @Last Modified time: 2018-07-26 23:43:50
 */
 *{
 	margin: 0;
@@ -65,6 +65,7 @@ img{
 	width: 496px;
 	height: 44px;
 	float: right;
+	position: relative;
 }
 .audio .header .nav .right .con a{
 	width: 116px;
@@ -79,10 +80,10 @@ img{
 	font-size: 16px;
 	color: #141214;
 }
-.audio .header .nav .right .con a:hover{
+/* .audio .header .nav .right .con a:hover{
 	opacity: 0;
-}
-.audio .header .nav .right .con a em{
+} */
+/* .audio .header .nav .right .con a em{
 	display: block;
 	width: 116px;
 	height:44px;
@@ -90,14 +91,19 @@ img{
 	position: absolute;
 	top: 0;
 	left: 0;
-}
-.audio .header .nav .right .con a em:hover{
+} */
+/* .audio .header .nav .right .con a em:hover{
 	opacity: 1;
 	bottom: 0;
-}
+} */
 .audio .header .nav .right .con a:nth-child(1){
 	width: 148px;
 	height: 44px;
+}
+.audio .header .nav .right .con a:nth-child(5){
+	position: absolute;
+	top: 0;
+	left: -116px;
 }
 .audio .header .nav .right .con a:nth-of-type(4) span{
 	color: #A50C00;
