--- a/css/list2.css
+++ b/css/list2.css
@@ -2,7 +2,7 @@
 * @Author: 牛培楠
 * @Date:   2018-07-17 20:53:05
 * @Last Modified by:   牛培楠
-* @Last Modified time: 2018-07-19 18:37:38
+* @Last Modified time: 2018-08-02 00:12:48
 */
 *{
 	margin: 0;
@@ -37,26 +37,24 @@ body{
 }
 .audio .header{
 	width: 100%;
-	height: 117px;
+	height: 80px;
 	position: fixed;
-	z-index: 100;
-	top: 0;
+	top:0;
 	left: 0;
-	background-color: rgba(255, 255, 255,0);
-	z-index: 100;
+	z-index: 100; 
+	/* background-color: rgba(255, 255, 255,0); */
 }
 .audio .header .nav{
 	width: 1200px;
-	height: 117px;
+	height: 80px;
 	margin: 0 auto;
-	overflow: hidden;
 }
 
 .audio .header .nav .left{
 	width: 300px;
 	height: 48px;
 	float: left;
-	margin-top: 30.45px;
+	margin-top: 20.45px;
 }
 .audio .header .nav .right{
 	width:900px;
@@ -68,6 +66,7 @@ body{
 	width: 496px;
 	height: 44px;
 	float: right;
+	position: relative;
 }
 .audio .header .nav .right .con a{
 	width: 116px;
@@ -76,16 +75,75 @@ body{
 	display: block;
 	float: right;
 	text-align: center;
+	position: relative;
+}
+.audio .header .nav .right .con a .pinpai{
+	width: 144px;
+	height: 144px;
+	position: absolute;
+	bottom: -144px;
+	left: -15px;
+	background: #fff;
+	z-index: 100;
+	display: none;
+}
+.audio .header .nav .right .con a .pinpai span{
+	display: block;
+	width: 144px;
+	height: 36px;
+	font-size: 16px;
+	text-align: center;
+	line-height:36px;
+	color: #676767;
+}
+.audio .header .nav .right .con a .chanpin{
+	width: 144px;
+	height: 252px;
+	position: absolute;
+	top: 44px;
+	left: -15px;
+	background: #fff;
+	display: none;
+}
+.audio .header .nav .right .con a .chanpin span{
+	display: block;
+	width: 144px;
+	height: 36px;
+	font-size: 16px;
+	text-align: center;
+	line-height:36px;
+	color: #676767;
 }
 .audio .header .nav .right .con a span{
 	font-size: 16px;
 	color: #141214;
 }
+/* .audio .header .nav .right .con a:hover{
+	opacity: 0;
+} */
+/* .audio .header .nav .right .con a em{
+	display: block;
+	width: 116px;
+	height:44px;
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+} */
+/* .audio .header .nav .right .con a em:hover{
+	opacity: 1;
+	bottom: 0;
+} */
 .audio .header .nav .right .con a:nth-child(1){
 	width: 148px;
 	height: 44px;
 }
-.audio .header .nav .right .con a:nth-of-type(4) span{
+.audio .header .nav .right .con a:nth-child(5){
+	position: absolute;
+	top: 0;
+	left: -116px;
+}
+.audio .header .nav .right .con a:nth-of-type(2) span{
 	color: #A50C00;
 	border-bottom: 2px solid #A50C00;
 	padding-bottom: 10px; 
