--- a/css/inventory.css
+++ b/css/inventory.css
@@ -31,7 +31,7 @@ img{
 	top:0;
 	left: 0;
 	z-index: 100; 
-	/* background-color: rgba(255, 255, 255,0); */
+	background-color: rgba(255, 255, 255,0);
 }
 .longphoto .header .nav{
 	width: 1200px;
@@ -65,6 +65,16 @@ img{
 	float: right;
 	text-align: center;
 	position: relative;
+	/*overflow: hidden;*/
+}
+.longphoto .header .nav .right .con a:nth-of-type(3)::after{
+	content: "";
+	width: 60px;
+	height: 1px;
+	background-color: #A50C00;
+	position: absolute;
+	top: 43px;
+	left: 30px;
 }
 .longphoto .header .nav .right .con a .pinpai{
 	width: 144px;
@@ -80,7 +90,7 @@ img{
 	display: block;
 	width: 144px;
 	height: 36px;
-	font-size: 16px;
+	font-size: 14px;
 	text-align: center;
 	line-height:36px;
 	color: #676767;
@@ -98,7 +108,7 @@ img{
 	display: block;
 	width: 144px;
 	height: 36px;
-	font-size: 16px;
+	font-size: 14px;
 	text-align: center;
 	line-height:36px;
 	color: #676767;
@@ -107,22 +117,38 @@ img{
 	font-size: 16px;
 	color: #141214;
 }
-/* .audio .header .nav .right .con a:hover{
-	opacity: 0;
-} */
-/* .audio .header .nav .right .con a em{
+.longphoto .header .nav .right .con a:nth-child(4) span{
 	display: block;
-	width: 116px;
-	height:44px;
-	opacity: 0;
+	width: 144px;
+	height: 44px;
+	text-align: center;
+	line-height: 44px;
+	font-size: 16px;
+	color: #141214;
+	transition: all 0.5s;
 	position: absolute;
-	top: 0;
 	left: 0;
-} */
-/* .audio .header .nav .right .con a em:hover{
-	opacity: 1;
-	bottom: 0;
-} */
+	top: 0;
+}
+.longphoto .header .nav .right .con a em{
+	display: block;
+	width: 144px;
+	height: 44px;
+	text-align: center;
+	line-height: 44px;
+	font-size: 16px;
+	color: #141214;
+	position: absolute;
+	left: 0;
+	top: 44px;
+	display: none;
+}
+/*.audio .header .nav .right .con a:nth-of-type(4):hover span{
+	top: -44px;
+}
+.audio .header .nav .right .con a:nth-of-type(4):hover em{
+	top: 0;
+}*/
 .longphoto .header .nav .right .con a:nth-child(1){
 	width: 148px;
 	height: 44px;
@@ -132,10 +158,8 @@ img{
 	top: 0;
 	left: -116px;
 }
-.longphoto .header .nav .right .con a:nth-of-type(4) span{
+.longphoto .header .nav .right .con a:nth-of-type(3) .span{
 	color: #A50C00;
-	border-bottom: 2px solid #A50C00;
-	padding-bottom: 10px; 
 }
 .longphoto .middle{
 	width: 100%;
