--- a/css/list3.css
+++ b/css/list3.css
@@ -66,7 +66,18 @@ img{
 	float: right;
 	text-align: center;
 	position: relative;
-	/*overflow: hidden;*/
+}
+.longphoto .header .nav .right .con a span{
+	opacity:1;
+}
+.longphoto .header .nav .right .con a:hover span{
+	opacity:0;
+}
+.longphoto .header .nav .right .con a em{
+	opacity:0;
+}
+.longphoto .header .nav .right .con a:hover em{
+	opacity:1;
 }
 .longphoto .header .nav .right .con a:nth-of-type(1)::after{
 	content: "";
@@ -75,20 +86,29 @@ img{
 	background-color: #A50C00;
 	position: absolute;
 	top: 43px;
-	left: 45px;
+	left: 40px;
+}
+.longphoto .header .nav .right .con a:hover::after{
+	content: "";
+	width: 60px;
+	height: 1px;
+	background-color: #A50C00;
+	position: absolute;
+	top: 43px;
+	left: 40px;
 }
 .longphoto .header .nav .right .con a .pinpai{
 	width: 144px;
-	height: 144px;
+	height: 0;
 	position: absolute;
-	bottom: -144px;
-	left: -15px;
+	overflow: hidden;
+	left:-5px;
+	top: 44px;
+	z-index: 150;
+	transition: all 0.5s;
 	background: #fff;
-	z-index: 100;
-	display: none;
 }
-.longphoto .header .nav .right .con a .pinpai span{
-	display: block;
+.longphoto .header .nav .right .con a .pinpai p{
 	width: 144px;
 	height: 36px;
 	font-size: 14px;
@@ -98,15 +118,15 @@ img{
 }
 .longphoto .header .nav .right .con a .chanpin{
 	width: 144px;
-	height: 252px;
+	height: 0px;
 	position: absolute;
 	top: 44px;
-	left: -15px;
+	left: -5px;
 	background: #fff;
-	display: none;
+	overflow: hidden;
+	transition: all 0.5s;
 }
-.longphoto .header .nav .right .con a .chanpin span{
-	display: block;
+.longphoto .header .nav .right .con a .chanpin p{
 	width: 144px;
 	height: 36px;
 	font-size: 14px;
@@ -118,7 +138,7 @@ img{
 	font-size: 16px;
 	color: #141214;
 }
-.longphoto .header .nav .right .con a:nth-child(4) span{
+.longphoto .header .nav .right .con a span{
 	display: block;
 	width: 144px;
 	height: 44px;
@@ -134,22 +154,22 @@ img{
 .longphoto .header .nav .right .con a em{
 	display: block;
 	width: 144px;
-	height: 44px;
+	height: 0;
 	text-align: center;
 	line-height: 44px;
 	font-size: 16px;
-	color: #141214;
+	transition: all 0.5s;
 	position: absolute;
 	left: 0;
-	top: 44px;
-	display: none;
+	top: 0px;
+	color: #A50C00;
 }
-/*.audio .header .nav .right .con a:nth-of-type(4):hover span{
+.longphoto .header .nav .right .con a:hover span{
 	top: -44px;
 }
-.audio .header .nav .right .con a:nth-of-type(4):hover em{
+.longphoto .header .nav .right .con a:hover em{
 	top: 0;
-}*/
+}
 .longphoto .header .nav .right .con a:nth-child(1){
 	width: 148px;
 	height: 44px;
@@ -161,6 +181,15 @@ img{
 }
 .longphoto .header .nav .right .con a:nth-of-type(1) span{
 	color: #A50C00;
+}
+.longphoto .header .nav .right .con a:hover span{
+	color:#A50C00;
+}
+.longphoto .header .nav .right .con a:hover .pinpai span{
+	color:#141214;
+}
+.longphoto .header .nav .right .con a:hover .chanpin span{
+	color:#141214;
 }
 .longphoto .middle{
 	width: 100%;
